--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1, initial-scale=1.0">
+    <meta name="viewport" 
+    content="width=1, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Wellcome to my filmsite<h1>
+    <h1>Välkommen till min filmsida</h1>
+    <p>Här hittar du min topplista.</p>
+    <p>
+        <p>Film 1: F1 The Movie</p>
+        <img src="F1 The Movie.jpg" alt="image">
+        <p>Film 2: Ford V Ferrari</p>
+        <img src="Ford V Ferrari.jpg" alt="image">
+        <p>Film 3: Iron Man</p> 
+        <img src="Iron man" alt="image">
+        <p><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&list=RDxvFZjo5PgG0&start_radio=1">Film 4: YouTube Video</a></p>
 </body>
-    <h1>Wellcome to my filmsite</h1>
-</html>
+</html><!-- Add this inside your <body> -->
